<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Woof</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="woof"><b>Woof!</b></string>
    <color name="purdue_gold">#b1946c</color>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <string name="add_new_contact">Add New Contact</string>
    <string name="woof_message_hint">What\'s on your mind?</string>
    <string name="choose_contact">Choose contact</string>
    <string name="send_woof_button_description">Click here to send your Woof!</string>
    <string name="character_count_initial_text">0 / 280</string>
    <color name="dark_gray">#212121</color>
    <color name="pokemon_gold">#cfb53b</color>
    <string name="notify_default">Send a Woof!</string>
    <string name="name_label">Name</string>
    <string name="sms_number_label">Cell Phone Number</string>
    <string name="email_label">Email(s) - comma separated</string>
    <string name="twitter_handle_label">Twitter Handle</string>
    <string name="reddit_username_label">Reddit Username</string>
    <string name="submit_string">Submit</string>
    <string name="load_contact_string">Load Contact</string>
    <string name="choose_woof_string">Choose your Woof</string>
    <string name="woof_button_one_string">Woof 1</string>
    <string name="woof_button_two_string">Woof 2</string>
    <string name="woof_button_three_string">Woof 3</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string-array name="woof_sounds_list">
        <item >Woof 1</item>
        <item >Woof 2</item>
        <item >Woof 3</item>
        <item >Woof 4</item>
    </string-array>
    <string-array name="woof_sounds_value_list">
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
    </string-array>
    <string-array name="woof_quantity_list">
        <item >(1) Yip!</item>
        <item >(2) Bark!</item>
        <item >(3) Woof!</item>
        <item >(5) Howl!</item>
    </string-array>
</resources>
