<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:padding="25dp"
    android:orientation="vertical"  >

    <TextView
        android:id="@+id/choose_woof_label"
        android:text="@string/choose_woof_string" 
        android:layout_width="wrap_content"
        android:textColor="@color/dark_gray"
        android:layout_height="wrap_content" />
    
    <RadioButton
        android:id="@+id/woof_button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_gray"
        android:text="@string/woof_button_one_string" />
    
    <RadioButton
        android:id="@+id/woof_button_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_gray"
        android:text="@string/woof_button_two_string" />
    
    <RadioButton
        android:id="@+id/woof_button_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_gray"
        android:text="@string/woof_button_three_string" />
    
</LinearLayout>