<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/dark_gray"
    tools:context="edu.purdue.cs.woof.WoofFragment" >

    <Button
        android:id="@+id/choose_contact_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/pokemon_gold"
        android:layout_marginBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/choose_contact" />

    <TextView
        android:id="@+id/notify_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notify_default"
        android:gravity="center_horizontal"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/woof_message_edittext"
        android:inputType="textCapSentences|textMultiLine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:maxLength="250"
        android:maxLines="4"
        android:minHeight="160dp"
        android:gravity="top|start"
        android:hint="@string/woof_message_hint"/>

    <TextView
        android:id="@+id/character_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/character_count_initial_text"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:ems="10" >
    </TextView>
    
    <Button
        android:id="@+id/send_woof_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/pokemon_gold"
        android:text="@string/woof"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="32sp" />

</LinearLayout>
